Fix a layout issue with Android

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -31,6 +31,8 @@
 .search-form__input {
     flex: 1;
     border-radius: 50%;
+    /* Android */
+    width: 100%;
 }
 
 .search-form__submit {
